--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TrailMix1" parent="AppTheme" >
+        <item name="colorPrimaryDark">@color/colorAccent</item>
+    </style>
+
 </resources>
