--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#139819</color>
     <color name="red">#ffff0000</color>
     <color name="green">#42f450</color>
-    <color name="colorBackground">#dcb270</color>
+    <color name="colorBackground">#fafafa</color>
 
 </resources>
