--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.trailmix.MainActivity">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/timeView"
         android:layout_width="173dp"
         android:layout_height="49dp"
         android:layout_marginBottom="17dp"
