--- a/app/src/main/res/layout/activity_finished.xml
+++ b/app/src/main/res/layout/activity_finished.xml
@@ -8,11 +8,12 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="186dp"
-        android:layout_height="58dp"
+        android:layout_width="283dp"
+        android:layout_height="152dp"
         android:text="Your playlist has finished, would you like to start another one?"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="181dp" />
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="60dp"
+        tools:layout_editor_absoluteY="87dp" />
 
     <Button
         android:id="@+id/button2"
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content"
         android:onClick="onYes"
         android:text="Yes"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="86dp"
         tools:layout_editor_absoluteY="278dp" />
 
@@ -29,6 +31,7 @@
         android:layout_height="wrap_content"
         android:onClick="onNo"
         android:text="No"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="208dp"
         tools:layout_editor_absoluteY="278dp" />
 </android.support.constraint.ConstraintLayout>
