--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="red">#ffff0000</color>
     <color name="green">#42f450</color>
     <color name="colorBackground">#fafafa</color>
+    <color name="background_material_light">#fafafa</color>
 
 </resources>
