--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
 
     <TextView
         android:id="@+id/timeView"
-        android:layout_width="173dp"
-        android:layout_height="49dp"
+        android:layout_width="211dp"
+        android:layout_height="105dp"
         android:layout_marginBottom="17dp"
         android:text="@string/text"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,6 +33,7 @@
         android:layout_marginTop="8dp"
         android:onClick="getDuration"
         android:text="@string/button"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
