--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.trailmix.MainActivity">
+    tools:context="com.example.trailmix.MainActivity"
+    android:background="@drawable/image"
+    >
 
     <TextView
         android:id="@+id/timeView"
