MVP UI(?) -Loading screen will be implemented when music is -Some minor updates may be necessary, however current version is up and running

--- a/app/src/main/res/layout/activity_finished.xml
+++ b/app/src/main/res/layout/activity_finished.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FinishedActivity"
-    android:background="@drawable/image">
+    android:background="@drawable/ic_blue_shapes">
 
     <TextView
         android:id="@+id/textView"
