--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.trailmix.MainActivity"
-    android:background="@drawable/image"
+    android:background="@drawable/ic_blue_shapes"
     >
-    <!--http://www.fotosearch.com/CSP996/k17045744/-->
+    <!--http://svgur.com/s/2x3 -->
 
     <TextView
         android:id="@+id/timeView"
-        android:layout_width="211dp"
+        android:layout_width="240dp"
         android:layout_height="105dp"
         android:layout_marginBottom="17dp"
         android:text="@string/text"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.301" />
+        app:layout_constraintVertical_bias="0.316" />
 
     <Button
         android:id="@+id/button"
@@ -59,6 +58,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.458" />
+        app:layout_constraintVertical_bias="0.498" />
 
 </android.support.constraint.ConstraintLayout>
