--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="108"
     android:viewportWidth="108"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#E2E8C0"
+    <path android:fillColor="#BAE899"
           android:pathData="M0,0h108v108h-108z"/>
     <!-- This adds the default lines
     <path android:fillColor="#00000000" android:pathData="M9,0L9,108"
