--- a/app/src/main/res/drawable/ic_app_icon.xml
+++ b/app/src/main/res/drawable/ic_app_icon.xml
@@ -1,3 +1,5 @@
+<!--http://svgur.com/s/2x3 -->
+<!--This is the launch screen aesthetics -->
 <vector android:height="24dp" android:viewportHeight="1000"
     android:viewportWidth="1000" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:pathData="M263.25,12.75c-26.99,8.23 -44.03,30.06 -51.3,64.9c-3.83,19.33 -3.64,29.1 1.91,73.32c14.55,115.82 32.16,180.14 54.56,200.43c21.25,19.14 79.63,32.93 167.5,39.44c102.42,7.47 231.44,-5.74 279.49,-28.71c25.08,-12.06 36.95,-34.07 51.69,-96.29c11.87,-50.15 25.08,-148.55 23.16,-172.29c-2.49,-30.82 -16.27,-59.34 -34.46,-71.6c-18.57,-12.63 -5.36,-12.06 -256.52,-11.87C316.28,10.07 269.76,10.64 263.25,12.75zM511.54,169.91c7.85,5.17 51.69,49.2 54.75,54.75c3.44,6.51 3.44,15.51 0,22.21c-1.53,2.87 -14.74,17.04 -29.48,31.4l-26.8,26.42l-9.95,-0L490.1,304.69l-26.8,-26.42c-14.74,-14.36 -27.95,-28.52 -29.48,-31.4c-3.44,-6.7 -3.44,-15.7 0,-22.21c3.06,-5.74 49.77,-52.26 55.71,-55.51C495.27,165.89 506.18,166.46 511.54,169.91z"/>
