--- a/app/src/main/res/drawable/ic_blue_shapes.xml
+++ b/app/src/main/res/drawable/ic_blue_shapes.xml
@@ -1,3 +1,4 @@
+<!--Photo from: https://www.freepik.com/free-photos-vectors/triangle-->
 <vector android:height="24dp" android:viewportHeight="1080"
     android:viewportWidth="1920" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#e8f1fa"
